--- a/public/index.html
+++ b/public/index.html
@@ -39,5 +39,10 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
+    <script
+      src="https://kit.fontawesome.com/aa5abeafbc.js"
+      crossorigin="anonymous"
+      defer
+    ></script>
   </body>
 </html>
